# yolo_VIKA

./: .cz-config.js  .gitignore  README.md
homework1/: README.md
homework1/cls_imageNette/: hw_1.model_metrics.ipynb
homework1/cls_imagewoof/: eval_inference_speed.py  train.py
homework1/segmentation/: README.md  YOLOv8_segment.ipynb
homework1_cls_imageNette/: README.md
homework1_detection/: model_metrics.ipynb
homework1_segmentation/: pyproject.toml
homework2/cls_imageNette/: hw_2.quantize_and_prune.ipynb
homework2/detection/: model_quantization_and_pruning.ipynb
homework2/segmentation/: ms_coco_val_2017.yaml  pyproject.toml  yolov8l-seg_quant_and_prune.ipynb
homework2_cls_quantize_and_prune/: qunatization_and_pruning.ipynb
homework2_detection/: coco.yaml  model_quantization_and_pruning.ipynb
homework3/cls/: hw_3.clustering.ipynb
homework3/cls_vladimir/: yolo_cls_clustering.ipynb
homework3/segmentation/: README.md  yolov8s_weights_clustering_detection.ipynb
homework4/cls/: hw_4.distill.ipynb
homework4/cls_vladimir/: distillation.ipynb
homework4/detection/: model_distillation.ipynb
homework4/segmentation/: pyproject.toml
homework5/cls/: hw_5.onnx_openvino_tensorrt.ipynb
homework5/cls_vladimir/: export.ipynb
homework5/detection/: model_onnx_openvino.ipynb
homework5/segmentation/: Dockerfile  README.md  environment.yml  ms_coco_val_2017.yaml  yolov8_seg_export.ipynb
homework6/image_classification/: vit_optimum.ipynb
homework6/sentence_encoder/: optimum_model.ipynb
homework6/text_classification/: README.md  Text_Classification_on_GLUE_bert-base.ipynb
hw_1_classification/: hw_1.ipynb
(+2 files in other folders)
