[tool.poetry]
name = "homework1_segmentation"
version = "0.0.1"
description = "yolov8-seg estimation"
authors = ["Anton Shiryaev <med.phisiker@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.23.3"
torch = "1.13.1"
torchvision = "0.14.1"
ultralytics = "8.0.176"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
